<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memo</string>
    
    <string name="title_memo_list">Memo List</string>
    <string name="title_memo_editor">Edit Memo</string>
    <string name="title_save_location">Label for the location</string>
    
    <string name="label_memo_edit_intent">Edit Memo</string>
    
    <string name="button_label_set_location">Set Location</string>
    <string name="button_label_set_time">Set Time</string>
    <string name="button_label_save_memo">Save Memo</string>

    <string name="edit_activity">Activity</string>
    <string name="edit_description">Description</string>
    <string name="edit_contact">Contacts</string>
    
    <string name="button_hint_default">Use the buttons below to change the info</string>
    <string name="button_hint_change_title">Change the title</string>
    <string name="button_hint_change_time">Change the time</string>
    <string name="button_hint_change_contacts">Change the contacts</string>
    <string name="button_hint_change_location">Change the location</string>
    <string name="button_hint_change_tags">Change the tags</string>
    
    <string name="menu_add_memo">Add a Memo</string>
    <string name="menu_delete_memo">Delete</string>
</resources>
