<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/edit_activity" />

		<AutoCompleteTextView id="@+id/edit_tag"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:completionThreshold="1">
		</AutoCompleteTextView>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit_contact" />

		<AutoCompleteTextView id="@+id/edit_contact"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:completionThreshold="1">
		</AutoCompleteTextView>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit_description" />

		<EditText id="@+id/edit_desc" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
		</EditText>
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView id="@+id/text_time"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
		<Button id="@+id/set_time" android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_label_set_time">
		</Button>
	</LinearLayout>


	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView id="@+id/text_location"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
		<Button id="@+id/set_location"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_label_set_location">
		</Button>
	</LinearLayout>

	<Button id="@+id/save_memo" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/button_label_save_memo">
	</Button>

</LinearLayout>